<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.springmvcexamples.core</groupId>
  <artifactId>SpringMVCExamples</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>SpringMVCExamples</name>
  <url>http://maven.apache.org</url>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

	<!-- Spring framework --> 
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring</artifactId>
        <version>2.5.6</version>
    </dependency>
 
    <!-- Spring MVC framework --> 
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-webmvc</artifactId>
        <version>2.5.6</version>
    </dependency>
 
    <!-- JSTL --> 
    <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>jstl</artifactId>
        <version>1.1.2</version>
    </dependency>

	<dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>
 
    <dependency>
        <groupId>taglibs</groupId>
        <artifactId>standard</artifactId>
        <version>1.1.2</version>
    </dependency>

	<!-- tiles --> 
	<dependency>
		<groupId>org.apache.tiles</groupId>
		<artifactId>tiles-core</artifactId>
		<version>2.0.5</version>
	</dependency>
	<dependency>
		<groupId>org.apache.tiles</groupId>
		<artifactId>tiles-jsp</artifactId>
		<version>2.0.5</version>
	</dependency>
  </dependencies>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	<!-- general -->
    <server.name>localhost</server.name>

	<!--  tomcat -->
	<tomcat.home>${env.TOMCAT_HOME}</tomcat.home>
	<exec.extension>sh</exec.extension>
	<server.port>8080</server.port>
	<server.port.mod>:${server.port}</server.port.mod>
	<jpda.address>8000</jpda.address>
    <tomcat.max.memory>256</tomcat.max.memory>
    <tomcat.max.perm.size>128</tomcat.max.perm.size>
  </properties>

   <build>
       <finalName>SpringMVCExamples</finalName>
       <plugins>
<!--  Jetty plugin
		 <plugin>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>maven-jetty-plugin</artifactId>
         </plugin>
-->
       </plugins>
   </build>

  <profiles>
    <profile>
      <id>tomcat-rebuild</id>
      <activation>
        <property>
          <name>env</name>
          <value>local</value>
        </property>
      </activation>       
      <build>
        <plugins>
	      <!--  use java 1.6 (otherwise it'll use java 1.3)-->
          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.6</source>
                <target>1.6</target>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <dependencies>
            </dependencies>
            <executions>
                <execution>
                <id>stop.tomcat</id>
                <phase>initialize</phase>
                <configuration>
                   <tasks>
                        <exec dir="${tomcat.home}/bin" executable="${tomcat.home}/bin/catalina.${exec.extension}">
                            <arg line="stop" />
                        </exec>
                        <exec dir="." executable="${basedir}/src/script/remote/immediateTomcatKill.sh" />
                    </tasks>            
                </configuration>
                <goals>
                  <goal>run</goal>
                </goals>
              </execution>            
              <execution>
                <id>start.tomcat</id>
                <phase>pre-integration-test</phase>
                <configuration>
                   <tasks>
                        <property name="dist.dir" value="target" />
                        <property name="basename" value="SpringMVCExamples" />
                        <property name="war.name" value="${basename}.war" />
                        <waitfor maxwait="100000">
                            <not>
                                <socket server="${server.name}" port="${server.port}"/>
                            </not>  
                        </waitfor>
                        <copy file="${dist.dir}/${war.name}" todir="${tomcat.home}/webapps" />
                        <delete dir="${tomcat.home}/webapps/${basename}" />
                        <delete dir="${tomcat.home}/work/Catalina/localhost/${basename}" />

                        <exec dir="${tomcat.home}/bin" executable="${tomcat.home}/bin/catalina.${exec.extension}">
                            <arg line="jpda start" />
                            <env key="CATALINA_OPTS" value="-server -Dcom.sun.management.jmxremote -Duser.timezone=UTC -Xms64m -Xmx${tomcat.max.memory}m -XX:MaxPermSize=${tomcat.max.perm.size}m" />
                            <env key="JPDA_ADDRESS" value="${jpda.address}"/>
                        </exec>
                        <waitfor maxwait="100000">
                            <http url="http://${server.name}${server.port.mod}/SpringMVCExamples/"/>
                        </waitfor>
                        <echo message="server up" />
                    </tasks>            
                </configuration>
                <goals>
                  <goal>run</goal>
                </goals>
              </execution>             
            </executions>
          </plugin>            
        </plugins>     
      </build>    
    </profile>
  </profiles>
</project>
